# Titanic_survival_QML_Project

./: .gitignore  2QUBIT_VS_4QUBIT.md  ARCHITECTURE.md  AUDIT_REPORT.md  COMPLETE.md  DEPENDENCIES_ANALYSIS.md  ENHANCEMENTS_SUMMARY.md  EXACT_IMPLEMENTATION_GUIDE.md  FIXES_APPLIED.md  FIX_COMPLETION_REPORT.md  PROJECT_SYNC_REPORT.md  QUICK_STATUS.md  Quantum_Computing_Comprehensive_Study_Guide.md  README.md  README_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  main.py  project_overview.md  pyproject.toml  verify_naming.py
Data/Processed/: circuit_4qubit.pkl  toy_encoded_data_4qubit.pkl
Data/Raw/: README.md  titanic_data.csv  toy_titanic.csv
Notebooks/: 00_.data_preprocessing_and_encoding.ipynb  01_circuit_build_and_interference.ipynb  02_measurement_and_classification.ipynb
report/: 00_Abstract_and_Keywords.md  01_Technical_Documentation.md  02_Results_and_Analysis.md  03_Introduction.md  04_Theoretical_Background.md  05_Methodology.md  06_Results.md  07_Discussion_and_Conclusion.md  08_Introduction_and_Theory_with_Citations.md  references.bib
src/: 03_exact_book_implementation_4qubit.ipynb  exact_4qubit_classifier.py
